Missing Menus #1289

Closed
opened 2004-05-14 15:57:02 +02:00 by Stefano Selleri · 3 comments

Group: V 2.33a release
Resolution: Fixed
Category: Interface

%%%3D Window Menus, Editmode

For Meshes -> Mirror says CTRL-M but is plain MKEY
(CTRL-M works too, anyway)

For Curves and Surfaces -> Mirror (Mkey) is missing as
a menu entry

For Metaballs -> Mirror (MKEY) is missing, which is a
minor issue since anyway the Mirror Menu does not work :)
The KeyFrame menu (IKEY) is missing (if it makes sense)
and the whole 'Snap' and 'Transform' Group of Menus and
Submenus is missing (and this works!)

Armatures -> Mirror menu entry missing

Lattice -> Missing 'Transform' Menu and submenu and
'Mirror' Menu, as usual :)

This is Win2k and Blender 2.33a, if matters.

Stefano%%%

**Group**: V 2.33a release **Resolution**: Fixed **Category**: Interface %%%3D Window Menus, Editmode For Meshes -> Mirror says CTRL-M but is plain MKEY (CTRL-M works too, anyway) For Curves and Surfaces -> Mirror (Mkey) is missing as a menu entry For Metaballs -> Mirror (MKEY) is missing, which is a minor issue since anyway the Mirror Menu does not work :) The KeyFrame menu (IKEY) is missing (if it makes sense) and the whole 'Snap' and 'Transform' Group of Menus and Submenus is missing (and this works!) Armatures -> Mirror menu entry missing Lattice -> Missing 'Transform' Menu and submenu and 'Mirror' Menu, as usual :) This is Win2k and Blender 2.33a, if matters. Stefano%%%

Changed status to: 'Open'

Changed status to: 'Open'

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#1289
No description provided.