Bug #1289 Mirror menu missing in the Header Menu for most object types in edit mode

http://projects.blender.org/tracker/index.php?func=detail&aid=1289&group_id=9&atid=125